01-prereqs/01-ldap/01-yaml/03-optional-phpldapadmin-ui/07-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  labels:
    app: phpldapadmin
spec:
  replicas: 1
  selector:
    matchLabels:
       app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
        - name: phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          volumeMounts:
            - name: config-volume
              mountPath: /tmp/config.php
              subPath: config.php
            - name: startup-volume
              mountPath: /container/service/phpldapadmin/startup.sh
              subPath: startup.sh
          ports:
            - containerPort: 80
              name: phpldapadmin
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
      volumes:
        - name: config-volume
          configMap:
            name: phpldapadmin-config
        - name: startup-volume
          configMap:
            name: phpldapadmin-startup
            defaultMode: 0777              
      serviceAccount: phpldapadmin
      serviceAccountName: phpldapadmin
