01-prereqs/01-ldap/01-yaml/03-optional-phpldapadmin-ui/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpldapadmin
  name: phpldapadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: phpldapadmin
