01-prereqs/01-ldap/01-yaml/03-optional-phpldapadmin-ui/06-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpldapadmin
spec:
  port:
    targetPort: 80
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: phpldapadmin
    weight: 100
  wildcardPolicy: None
